# group-sender

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.prog.yaml  docker-compose.yaml  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: action.yml
bot/: admin.py  auth.py  automessage.py  base.py  bot.py  db.py  keyboards.py  models.py  scheduler.py  views.py
bot/migrations/: 0001_initial.py  0002_telegramuser_subscription.py  0003_telegramapi_telegramuser_api.py  0004_alter_telegramuser_subscription.py  0005_alter_telegramuser_subscription.py  0006_alter_telegramuser_api.py
bot/templates/: index.html
db/: servers.json
scripts/: entrypoint.sh  set-webhook-url.sh
tgs/: asgi.py  urls.py  wsgi.py
tgs/settings/: base.py  dev.py  prod.py
