[tool.poetry]
name = "group-sender"
version = "0.1.0"
description = ""
authors = ["Nick <nickphilomath@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
telethon = "^1.38.1"
python-dotenv = "^1.0.1"
django = "^5.1.6"
djangorestframework = "^3.15.2"
pytelegrambotapi = "^4.26.0"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
